--- a/src/app/modules/dashboad/dashboad.component.html
+++ b/src/app/modules/dashboad/dashboad.component.html
@@ -1,1 +1,19 @@
-<p>dashboad works!</p>
+<div>
+    Line charts
+</div>
+
+<mat-divider></mat-divider>
+
+<div>
+    <div>Line charts</div>
+    <div>Line charts</div>
+    <div>Line charts</div>
+    <div>Line charts</div>
+</div>
+
+<mat-divider></mat-divider>
+
+<div>
+    <div>Table</div>
+    <div>Pie chart</div>
+</div>
