--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -1,1 +1,21 @@
-<p>sidebar works!</p>
+<mat-nav-list>
+    <div class="profile-card">
+        <div class="header"></div>
+        <h2>Malik COUCHY</h2>
+        <h4>malik.couchy@gmail.com</h4>
+        <!-- <img src="https://cdn.imgbin.com/3/12/17/imgbin-computer-icons-avatar-user-login-avatar-man-wearing-blue-shirt-illustration-mJrXLG07YnZUc2bH5pGfFKUhX.jpg" alt=""> -->
+        <img src="https://media-exp1.licdn.com/dms/image/C4D03AQHVyMV6y8_MoQ/profile-displayphoto-shrink_200_200/0?e=1606348800&v=beta&t=2pc1qcY4jInoUh9H4ZzESHEJk5xq-DV0VM24NO7ijFc" alt="">
+    </div>
+</mat-nav-list>
+
+<div>
+    profile
+</div>
+
+<mat-divider></mat-divider>
+
+menu
+
+<mat-divider></mat-divider>
+
+another menu
