--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -6,22 +6,27 @@
 
         <span>APP LOGO</span>
         <div fxFlex fxLaout="row" fxLayoutAlign="flex-end">
-            <ul>
+            <ul fxLayout="row" fxLayoutGap="20px">
                 <li>
                     <button mat-icon-button>
-                        <mat-icon>setting</mat-icon>
+                        <mat-icon>settings</mat-icon>
                     </button>
                 </li>
                 <li>
                     <button mat-icon-button>
-                        <mat-icon>aide en ligne</mat-icon>
+                        <mat-icon>help_outline</mat-icon>
                     </button>
                 </li>
                 <li>
-                     <button mat-icon-button>
-                         <mat-icon>help_outline</mat-icon>
+                     <button mat-button [matMenuTriggerFor]="menu">
+                         <mat-icon>person_outline</mat-icon>
                      </button>
-                     menu
+                    <mat-menu #menu="matMenu">
+                    <button mat-menu-item>
+                        <mat-icon>exit_to_app</mat-icon>
+                        Sign out
+                    </button>
+                    </mat-menu>
                 </li>
             </ul>
         </div>
