--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar color="primary">
     <mat-toolbar-row>
-        <button mat-icon-button>
-<mat-icon>mrnu</mat-icon>
+        <button mat-icon-button (click)="toggleSideBar()">
+<mat-icon>menu</mat-icon>
         </button>
 
         <span>APP LOGO</span>
