--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -1,21 +1,30 @@
 <mat-nav-list>
     <div class="profile-card">
-        <div class="header"></div>
-        <h2>Malik COUCHY</h2>
-        <h4>malik.couchy@gmail.com</h4>
+        <div class="header">
+            <h2>Malik COUCHY</h2>
+            <h4>malik.couchy@gmail.com</h4>
+        </div>
         <!-- <img src="https://cdn.imgbin.com/3/12/17/imgbin-computer-icons-avatar-user-login-avatar-man-wearing-blue-shirt-illustration-mJrXLG07YnZUc2bH5pGfFKUhX.jpg" alt=""> -->
-        <img src="https://media-exp1.licdn.com/dms/image/C4D03AQHVyMV6y8_MoQ/profile-displayphoto-shrink_200_200/0?e=1606348800&v=beta&t=2pc1qcY4jInoUh9H4ZzESHEJk5xq-DV0VM24NO7ijFc" alt="">
+        <img src="https://media-exp1.licdn.com/dms/image/C4D03AQHVyMV6y8_MoQ/profile-displayphoto-shrink_200_200/0?e=1606348800&v=beta&t=2pc1qcY4jInoUh9H4ZzESHEJk5xq-DV0VM24NO7ijFc" alt="Malik COUCHY">
     </div>
-</mat-nav-list>
 
-<div>
-    profile
-</div>
+    <mat-divider></mat-divider>
 
-<mat-divider></mat-divider>
-
-menu
+    <h2 matSubheader>Pages</h2>
+<a mat-list-item routerLinkActive="list-item-active" routerLink="/">Dasboard</a>
+<a mat-list-item routerLinkActive="list-item-active" routerLink="/posts">Posts</a>
+<a mat-list-item routerLinkActive="list-item-active" routerLink="/articles">Articles</a>
 
 <mat-divider></mat-divider>
 
-another menu
+<h2 matSubheader>Tools</h2>
+
+<a mat-list-item routerLinkActive="list-item-active" routerLink="/contacts">
+    <mat-icon>import_contacts</mat-icon>
+    Contacts
+</a>
+
+<a mat-list-item routerLinkActive="list-item-active" routerLink="/contacts">
+    <mat-icon>contact_phone</mat-icon>
+    Leads
+</a>
