--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -1,3 +1,13 @@
 ul li {
     list-style: none;
 }
+
+.logo{
+    width: 116px;
+    height: 60px;
+}
+
+.headerBandeau{
+    background-color: black;
+    color: white;
+}
