--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,4 +1,4 @@
 <mat-divider></mat-divider>
 <footer>
-    &copy; Kay Cafet' 2020. Développé avec amour par Malik Couchy
+    &copy; Kay Cafet' {{ today | date: 'yyyy' }} Développé avec amour par Malik Couchy
 </footer>
