--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,10 +1,10 @@
-<mat-toolbar color="primary">
+<mat-toolbar class="headerBandeau">
     <mat-toolbar-row>
         <button mat-icon-button (click)="toggleSideBar()">
 <mat-icon>menu</mat-icon>
         </button>
 
-        <span>APP LOGO</span>
+        <img class="logo" src="assets/images/kayCafetLogo.png" alt="Kay Cafet'" /><span>Kay Cafet'</span>
         <div fxFlex fxLaout="row" fxLayoutAlign="flex-end">
             <ul fxLayout="row" fxLayoutGap="20px">
                 <li>
