--- a/src/app/modules/dashboad/dashboad.component.html
+++ b/src/app/modules/dashboad/dashboad.component.html
@@ -2,7 +2,7 @@
           <table mat-table [dataSource]="dataSource">
 
             <!-- Position Column -->
-            <ng-container matColumnDef="CommandNumber">
+            <ng-container matColumnDef="commandNumber">
                 <th mat-header-cell *matHeaderCellDef> No. de commande </th>
                 <td mat-cell *matCellDef="let element"> {{element.commandNumber}} </td>
             </ng-container>
@@ -28,7 +28,7 @@
             <!-- Symbol Column -->
             <ng-container matColumnDef="status">
                 <th mat-header-cell *matHeaderCellDef> Status </th>
-                <td mat-cell *matCellDef="let element"> {{element.Status}} </td>
+                <td mat-cell *matCellDef="let element"> {{element.status}} </td>
             </ng-container>
 
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
