--- a/src/app/modules/dashboad/dashboad.component.html
+++ b/src/app/modules/dashboad/dashboad.component.html
@@ -1,10 +1,24 @@
 
+    <div flxLayout="row" class="filterDiv">
+      <mat-form-field fxFlex fxLayoutAlign="end start" appearance="fill">
+        <input matInput>
+        <mat-label>Heure de récupération</mat-label>
+        <mat-select [value]="-1" class="pickupTimeSelect">
+          <mat-option [value]="-1">Toutes</mat-option>
+          <mat-option *ngFor="let pickUpTime of pickUpTimes" [value]="pickUpTime">
+            {{pickUpTime}}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div> 
+
           <table mat-table [dataSource]="dataSource">
 
             <!-- Position Column -->
             <ng-container matColumnDef="commandNumber">
                 <th mat-header-cell *matHeaderCellDef> No. de commande </th>
                 <td mat-cell *matCellDef="let element"> {{element.commandNumber}} </td>
+
             </ng-container>
 
             <!-- Name Column -->
@@ -16,7 +30,7 @@
             <!-- Weight Column -->
             <ng-container matColumnDef="price">
                 <th mat-header-cell *matHeaderCellDef> Montant </th>
-                <td mat-cell *matCellDef="let element"> {{element.price}} </td>
+                <td mat-cell *matCellDef="let element"> {{element.price | currency : 'EUR'}} </td>
             </ng-container>
 
             <!-- Weight Column -->
@@ -25,10 +39,17 @@
               <td mat-cell *matCellDef="let element"> {{element.userName}} </td>
             </ng-container>
 
+            <ng-container matColumnDef="pickUpDeliveryTime">
+              <th mat-header-cell *matHeaderCellDef> Récupération </th>
+              <td mat-cell *matCellDef="let element"> {{element.orderPickUpTime | date:'hh:mm'}} </td>
+          </ng-container>
+
             <!-- Symbol Column -->
             <ng-container matColumnDef="status">
                 <th mat-header-cell *matHeaderCellDef> Status </th>
-                <td mat-cell *matCellDef="let element"> {{element.status}} </td>
+                <td mat-cell *matCellDef="let element"> <svg viewBox="0 0 80 80" width="15" height="15">
+                  <circle class="{{element.status === 'NT' ? 'untreated' : 'treated' }}" cx="40" cy="40" r="38"/>
+                </svg></td>
             </ng-container>
 
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
