feat: taille du nom Kay Cafet'

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -4,7 +4,7 @@
 <mat-icon>menu</mat-icon>
         </button>
 
-        <img class="logo" src="assets/images/kayCafetLogo.png" alt="Kay Cafet'" /><span>Kay Cafet'</span>
+        <img class="logo" src="assets/images/kayCafetLogo.png" alt="Kay Cafet'" /><span class="headerSpan">Kay Cafet'</span>
         <div fxFlex fxLaout="row" fxLayoutAlign="flex-end">
             <ul fxLayout="row" fxLayoutGap="20px">
                 <li>
