--- a/src/app/modules/dashboad/dashboad.component.html
+++ b/src/app/modules/dashboad/dashboad.component.html
@@ -51,19 +51,25 @@
             <ng-container matColumnDef="status">
                 <th mat-header-cell *matHeaderCellDef> Status </th>
                 <td class="tooltip" mat-cell *matCellDef="let element"> 
-                  <span class="tooltiptext">{{element.status === 'NT' ? 'Non traitée' : 'Traitée' }}</span>                  
+                  <span class="tooltiptext">{{element.status == orderStatus.untreated ? 'Non traitée' : 'Traitée' }}</span>                  
                   <svg viewBox="0 0 80 80" width="15" height="15">
-                  <circle class="{{element.status === 'NT' ? 'untreated' : 'treated' }}" cx="40" cy="40" r="38"/>
+                  <circle class="{{element.status == orderStatus.untreated ? 'untreated' : 'treated' }}" cx="40" cy="40" r="38"/>
                 </svg>
               </td>
             </ng-container>
             <ng-container matColumnDef="actions">
               <th mat-header-cell *matHeaderCellDef>Actions</th>
               <td mat-cell *matCellDef>
-                <button class="matIconButton" mat-icon-button aria-label="Traitée">
+                <button class="matIconButton tooltip" mat-icon-button>
+                  <span class="tooltiptext">Préparée</span>    
                   <mat-icon class="colorGreen">done</mat-icon>
                 </button>
-                <button class="matIconButton" mat-icon-button aria-label="Refuser">
+                <button class="matIconButton tooltip" mat-icon-button>
+                  <span class="tooltiptext">Récupérée</span>
+                  <mat-icon>directions_run</mat-icon>
+                </button>
+                <button (click)="openConfirmRefuseOrderDialog()" class="matIconButton tooltip" mat-icon-button>
+                  <span class="tooltiptext">Refuser la commande</span>    
                   <mat-icon color="warn">block</mat-icon>
                 </button>
               </td>
