--- a/src/app/shared/confirm-dialog/confirm-dialog.component.html
+++ b/src/app/shared/confirm-dialog/confirm-dialog.component.html
@@ -3,7 +3,7 @@
       <mat-icon id="close-icon" (click)="closeDialog()">close</mat-icon>
       <span class="content-span full-width">{{ data.message }}</span>
     </div>
-    <button mat-flat-button class="btn btn-danger btn-clean" [mat-dialog-close]="false">Annuler</button>
-    <button mat-flat-button class="btn btn-success btn-clean" [mat-dialog-close]="true">OK</button>
+    <button mat-raised-button color="warn" [mat-dialog-close]="false">Annuler</button>
+    <button mat-raised-button color="primary" [mat-dialog-close]="true">OK</button>
 </div>
   
