feat:site client

--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -1,6 +1,58 @@
 
 <div class="mainDiv">
-    <div class="inner-container">
-        <div class="categories-menu"></div>
+    <div class="categoriesDiv">
+        <ul class="categories-menu">
+            <li class="foodCategories">Formules</li>
+            <li class="foodCategories">Sandwichs</li>
+            <li class="foodCategories">Salades</li>
+            <li class="foodCategories">Boissons</li>
+            <li class="foodCategories">Desserts</li>
+        </ul>
+        <div class="spacing"></div>
+    </div>
+    <div class="menuDiv">
+        <div class="inner-container">
+            <div class="itemsCategory">
+                <div class="item">Formule végétarienne</div>
+                <div class="item">Formule végan</div>
+                <div class="item">Formule allégée</div>
+                <div class="item">Formule bon vivant</div>
+                <div class="item">Formule oasis + sandwich poulet + cookies</div>
+                <div class="item">Formule Yves Leborgne</div>
+            </div>
+            <div class="itemsCategory">
+                <div class="item">Sandwich au poulet</div>
+                <div class="item">Sandwich au jambon frommage</div>
+                <div class="item">Sandwich au corned beef</div>
+                <div class="item">Sandwich complet</div>
+                <div class="item">Sandwich thon mayonnaise</div>
+                <div class="item">Sandwich merguez</div>
+            </div>
+            <div class="itemsCategory">
+                <div class="item">Salade 1</div>
+                <div class="item">Salade 1</div>
+                <div class="item">Salade 1</div>
+                <div class="item">Salade 1</div>
+                <div class="item">Salade 1</div>
+                <div class="item">Salade 1</div>
+            </div>
+            <div class="itemsCategory">
+                <div class="item">Boissons</div>
+                <div class="item">Boissons</div>
+                <div class="item">Boissons</div>
+                <div class="item">Boissons</div>
+                <div class="item">Boissons</div>
+                <div class="item">Boissons</div>
+            </div>
+            <div class="itemsCategory">
+                <div class="item">Desserts</div>
+                <div class="item">Desserts</div>
+                <div class="item">Desserts</div>
+                <div class="item">Desserts</div>
+                <div class="item">Desserts</div>
+                <div class="item">Desserts</div>
+            </div>
+        </div>
+        <div class="cart">grg</div>
     </div>
 </div>
