--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -12,14 +12,18 @@
     </div>
     <div class="menuDiv">
         <div class="inner-container">
+            <div class="categoryTitle">Formules 6 références</div> <!--dans une autre div pour les ref -->
             <div class="itemsCategory">
-                <div class="item">Formule végétarienne</div>
+                <div class="item">
+                    <div class="itemDescription">Formule végétarienne</div>
+                </div>
                 <div class="item">Formule végan</div>
                 <div class="item">Formule allégée</div>
                 <div class="item">Formule bon vivant</div>
                 <div class="item">Formule oasis + sandwich poulet + cookies</div>
                 <div class="item">Formule Yves Leborgne</div>
             </div>
+            <div class="categoryTitle">Sandwichs</div>
             <div class="itemsCategory">
                 <div class="item">Sandwich au poulet</div>
                 <div class="item">Sandwich au jambon frommage</div>
@@ -28,6 +32,7 @@
                 <div class="item">Sandwich thon mayonnaise</div>
                 <div class="item">Sandwich merguez</div>
             </div>
+            <div class="categoryTitle">Salades</div>
             <div class="itemsCategory">
                 <div class="item">Salade 1</div>
                 <div class="item">Salade 1</div>
@@ -36,6 +41,7 @@
                 <div class="item">Salade 1</div>
                 <div class="item">Salade 1</div>
             </div>
+            <div class="categoryTitle">Boissons</div>
             <div class="itemsCategory">
                 <div class="item">Boissons</div>
                 <div class="item">Boissons</div>
@@ -44,6 +50,7 @@
                 <div class="item">Boissons</div>
                 <div class="item">Boissons</div>
             </div>
+            <div class="categoryTitle">Desserts</div>
             <div class="itemsCategory">
                 <div class="item">Desserts</div>
                 <div class="item">Desserts</div>
