feat: site principal (flex css)

--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -60,6 +60,19 @@
                 <div class="item">Desserts</div>
             </div>
         </div>
-        <div class="cart">grg</div>
+        <div class="cart">
+            <div class="cartTitle">Ma commande</div>
+            <mat-divider></mat-divider>
+            <div class="cartItem"></div>
+            <div class="cartItem"></div>
+            <div class="cartItem"></div>
+            <div class="cartItem"></div>
+            <div class="cartItem"></div>
+            <mat-divider></mat-divider>
+            <div class="orderDiv">
+                <div class="totalAmount">30£</div>
+                <button mat-button color="primary"></button>
+            </div>
+        </div>
     </div>
 </div>
