--- a/src/app/modules/home/home.component.scss
+++ b/src/app/modules/home/home.component.scss
@@ -13,13 +13,13 @@
 .menuDiv{
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: flex-end;
     height: 87%;
 }
 
 .categoriesDiv{
     height: 5rem;
-    // background-color: orange;
+    background-color: orange;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -29,7 +29,7 @@
     display: flex;  
     flex-direction: row;
     justify-content: center;
-    // background-color: pink;
+    background-color: pink;
     text-transform: uppercase;
     letter-spacing: 0.05rem;
     list-style-type: none;
@@ -48,11 +48,34 @@
 }
 
 .cart{
-    // background-color: green;
-    width: 18%;
+    background-color: white;
+    width: 28%;
+    min-height: 100%;
 }
+
+.cartTitle {
+    height: 100px;
+    background-color: #fff;
+    display: flex;
+    border-top: 1px solid #ececec;
+    border-bottom: 1px solid #ececec;
+    flex-direction: column;
+}
+
+.cartItem{
+    width: 100%;
+    min-height: 80px;
+    background: #fff;
+    border-top: 1px solid #ececec;
+    border-bottom: 1px solid #ececec;
+    padding: 16px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    background-color: yellowgreen;
+}
+
 .spacing {
-    width: 18%;
+    width: 28%;
 }
 
 .inner-container{
