--- a/src/app/modules/home/home.component.scss
+++ b/src/app/modules/home/home.component.scss
@@ -50,6 +50,11 @@
 .foodCategories{
     margin-left: 2rem;
     cursor: pointer;
+    border-radius: 5px;
+}
+
+.foodCategories:hover{
+    background: #ececec;
 }
 
 .cart{
@@ -116,4 +121,12 @@
 img{
     max-width:100%;
     max-height:100%;
+}
+
+.stickyMenu{
+    position: fixed;
+    background-color: rgb(249, 249, 249);
+    width: 100%;
+    border-bottom: 1px solid #ececec;
+    box-shadow: 0 2px 4px 0 rgba(0,0,0,.02);
 }
