--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,4 +2,4 @@
 @import '~material-design-icons/iconfont/material-icons.css';
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; }
