--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -11,54 +11,64 @@
     </div>
     <div class="menuDiv">
         <div class="inner-container">
-            <div id="formules" class="categoryTitle">Formules 6 références</div> <!--dans une autre div pour les ref -->
-            <div class="itemsCategory">
-                <div class="item">
-                    <div class="itemDescription">Formule végétarienne</div>
+            <div id="formules">
+                <div class="categoryTitle">Formules 6 références</div> <!--dans une autre div pour les ref -->
+                <div class="itemsCategory">
+                    <div class="item">
+                        <div class="itemDescription">Formule végétarienne</div>
+                    </div>
+                    <div class="item">Formule végan</div>
+                    <div class="item">Formule allégée</div>
+                    <div class="item">Formule bon vivant</div>
+                    <div class="item">Formule oasis + sandwich poulet + cookies</div>
+                    <div class="item">Formule Yves Leborgne</div>
                 </div>
-                <div class="item">Formule végan</div>
-                <div class="item">Formule allégée</div>
-                <div class="item">Formule bon vivant</div>
-                <div class="item">Formule oasis + sandwich poulet + cookies</div>
-                <div class="item">Formule Yves Leborgne</div>
             </div>
-            <div class="categoryTitle">Sandwichs</div>
-            <div id="sandwichs" class="itemsCategory">
-                <div class="item">Sandwich au poulet</div>
-                <div class="item">Sandwich au jambon frommage</div>
-                <div class="item">Sandwich au corned beef</div>
-                <div class="item">Sandwich complet</div>
-                <div class="item">Sandwich thon mayonnaise</div>
-                <div class="item">Sandwich merguez</div>
+            <div id="sandwichs">
+                <div class="categoryTitle">Sandwichs</div>
+                <div class="itemsCategory">
+                    <div class="item">Sandwich au poulet</div>
+                    <div class="item">Sandwich au jambon frommage</div>
+                    <div class="item">Sandwich au corned beef</div>
+                    <div class="item">Sandwich complet</div>
+                    <div class="item">Sandwich thon mayonnaise</div>
+                    <div class="item">Sandwich merguez</div>
+                </div>
             </div>
-            <div id="salades" class="categoryTitle">Salades</div>
-            <div class="itemsCategory">
-                <div class="item">Salade 1</div>
-                <div class="item">Salade 1</div>
-                <div class="item">Salade 1</div>
-                <div class="item">Salade 1</div>
-                <div class="item">Salade 1</div>
-                <div class="item">Salade 1</div>
+            <div id="salades">  
+                <div class="categoryTitle">Salades</div>
+                <div class="itemsCategory">
+                    <div class="item">Salade 1</div>
+                    <div class="item">Salade 1</div>
+                    <div class="item">Salade 1</div>
+                    <div class="item">Salade 1</div>
+                    <div class="item">Salade 1</div>
+                    <div class="item">Salade 1</div>
+                </div>
             </div>
-            <div id="boissons" class="categoryTitle">Boissons</div>
-            <div class="itemsCategory">
-                <div class="item">Boissons</div>
-                <div class="item">Boissons</div>
-                <div class="item">Boissons</div>
-                <div class="item">Boissons</div>
-                <div class="item">Boissons</div>
-                <div class="item">Boissons</div>
+            <div id="boissons">               
+                <div class="categoryTitle">Boissons</div>
+                <div class="itemsCategory">
+                    <div class="item">Boissons</div>
+                    <div class="item">Boissons</div>
+                    <div class="item">Boissons</div>
+                    <div class="item">Boissons</div>
+                    <div class="item">Boissons</div>
+                    <div class="item">Boissons</div>
+                </div>
             </div>
-            <div id="desserts" class="categoryTitle">Desserts</div>
-            <div class="itemsCategory">
-                <div class="item">Desserts</div>
-                <div class="item">Desserts</div>
-                <div class="item">Desserts</div>
-                <div class="item">Desserts</div>
-                <div class="item">Desserts</div>
-                <div class="item">Desserts</div>
+            <div id="desserts">
+                <div class="categoryTitle">Desserts</div>
+                    <div class="itemsCategory">
+                        <div class="item">Desserts</div>
+                        <div class="item">Desserts</div>
+                        <div class="item">Desserts</div>
+                        <div class="item">Desserts</div>
+                        <div class="item">Desserts</div>
+                        <div class="item">Desserts</div>
+                    </div>
+                </div>
             </div>
-        </div>
         <div class="cart">
             <div class="cartTitle">Ma commande</div>
             <!-- <mat-divider></mat-divider> -->
@@ -74,4 +84,5 @@
             </div>
         </div>
     </div>
+    <div style="height: 50rem;">Contactez nous</div>
 </div>
