feat:cart dialog

--- a/src/app/shared/confirm-dialog/confirm-dialog.component.html
+++ b/src/app/shared/confirm-dialog/confirm-dialog.component.html
@@ -1,7 +1,7 @@
 <div>
     <div class="contain-container">
       <mat-icon id="close-icon" (click)="closeDialog()">close</mat-icon>
-      <span class="content-span full-width">{{ data.message }}</span>
+      <span class="content-span full-width"><div [innerHtml]="htmlContent"></div></span>
     </div>
     <button mat-raised-button color="warn" [mat-dialog-close]="false">Annuler</button>
     <button mat-raised-button color="primary" [mat-dialog-close]="true">OK</button>
