--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -13,7 +13,8 @@
                 <ul class="rightIcons">
                     <li>
                         <button mat-icon-button>
-                            <mat-icon (click)="displayCartDialog()">shopping_cart</mat-icon>
+                            <span class="cartItemCount">4</span>
+                            <mat-icon class="shoppingCartIcon" (click)="displayCartDialog()">shopping_cart</mat-icon>
                         </button>
                     </li>
                 </ul>
