--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -11,9 +11,9 @@
     <mat-divider></mat-divider>
 
     <h2 matSubheader>Pages</h2>
-<a mat-list-item routerLinkActive="list-item-active" routerLink="/">Dasboard</a>
-<a mat-list-item routerLinkActive="list-item-active" routerLink="/posts">Posts</a>
-<a mat-list-item routerLinkActive="list-item-active" routerLink="/articles">Articles</a>
+<a mat-list-item routerLinkActive="list-item-active" routerLink="/admin">Dasboard</a>
+<a mat-list-item routerLinkActive="list-item-active" routerLink="/admin/posts">Posts</a>
+<a mat-list-item routerLinkActive="list-item-active" routerLink="/admin/articles">Articles</a>
 
 <mat-divider></mat-divider>
 
