--- a/src/app/modules/cart/cart.component.scss
+++ b/src/app/modules/cart/cart.component.scss
@@ -34,3 +34,22 @@
     width: 20%;
     height: 5rem;
 }
+
+#confirmOrder{
+    width: 25rem;
+    border-radius: 0.25rem;
+    cursor: pointer;
+    color: white;
+    background: rgb(118, 120, 204) none repeat scroll 0% 0%;
+    height: 3.4rem;
+}
+
+.cartActions{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+}
+
+.mat-dialog-container{
+    position: relative;
+}
