--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -13,6 +13,7 @@ ul li {
     display: flex;
     flex-direction: row;
     width: 100%;
+    height: 6.5rem;
 }
 
 .stickyHeader{
@@ -43,4 +44,16 @@ ul li {
 .centerDiv{
     //background-color: green !important;
     width: 80%;
+}
+
+.shoppingCartButon{
+    cursor: pointer;
+}
+
+.shoppingCartIcon{
+    font-size: 2.5rem;
+}
+
+.cartItemCount{
+    font-size: 1rem;
 }
