--- a/src/app/modules/login/login.component.html
+++ b/src/app/modules/login/login.component.html
@@ -38,8 +38,8 @@
                     <button (click)="removeRightPanelActive()" class="ghost" id="signIn">Connexion</button>
                 </div>
                 <div class="overlay-panel overlay-right">
-                    <h1>Salut à toi, Jeune entrepreneur!</h1>
-                    <p>Entre tes identifiants et démarre l'aventure avec nous.</p>
+                    <h1>Salut à toi, jeune entrepreneur!</h1>
+                    <p>remplit quelques infos et démarre l'aventure avec nous.</p>
                     <button (click)="addRightPanelActive()" class="ghost" id="signUp">Inscription</button>
                 </div>
             </div>
