--- a/src/app/modules/home/home.component.scss
+++ b/src/app/modules/home/home.component.scss
@@ -1,3 +1,36 @@
+@media all and (max-width:500px){
+    .foodCategories > a{
+        font-size: 0.65rem;
+    }
+    .foodCategories:not(:first-child){
+        margin-left: 0.65rem;
+    }
+
+    .categories-menu{
+        padding-left: 0;
+    }
+}
+
+@media all and(min-width:501px) and(max-width:654px){
+    .foodCategories{
+        margin-left: 0.8rem;
+    }
+
+    .categories-menu{
+        padding-left: 0;
+    }
+
+    .foodCategories > a{
+        font-size: 0.8rem;
+    }
+}
+
+@media all and(min-width:655px){
+    .foodCategories{
+        margin-left: 2rem;
+    }
+}
+
 .mainDiv{
     background-size: contain;
     background-repeat: no-repeat;
@@ -32,7 +65,6 @@
     letter-spacing: 0.05rem;
     list-style-type: none;
     margin-top: 2rem;
-    width: 60%;
  }
 
 .inner-container{
@@ -40,7 +72,6 @@
 }
 
 .foodCategories{
-    margin-left: 2rem;
     cursor: pointer;
     border-radius: 5px;
 }
